--- a/eds-223-hw-4.qmd
+++ b/eds-223-hw-4.qmd
@@ -16,6 +16,9 @@ editor_options:
 ---
 
 ```{r}
+#NOTE FOR ALE: This version is my initial attempt for the oysters, I then generalized it in a new qmd titled "eds-223-hw-4-general.qmd" 
+
+
 library(tmap)
 library(tidyverse)
 library(dplyr)
@@ -134,6 +137,4 @@ table_data %>%
     format = "html"
   ) %>%
    kable_styling(bootstrap_options = c("striped", "hover", "condensed"), full_width = FALSE)
-
-
 ```
