--- a/eds-223-hw-4-general.qmd
+++ b/eds-223-hw-4-general.qmd
@@ -2,7 +2,7 @@
 title: "Homework Assignment #4"
 subtitle: "Prioritizing Potential Aquaculture"
 author: "Eric Fairbanks"
-date: 11-14-2024
+date: 11-20-2024
 execute: 
   eval: true
 format:
@@ -25,7 +25,9 @@ library(terra)
 library(kableExtra)
 ```
 
-Part 1: Data Processing
+### Part 1: Data Processing
+
+### Load in Temp, Depth, and EEZs
 
 ```{r}
 #load in data
@@ -40,6 +42,8 @@ eez <- st_read(here("data", "wc_regions_clean.shp")) #exclusive economic zones
 #raster stack of sst
 sst_stack <- c(sst_2008, sst_2009, sst_2010, sst_2011, sst_2012)
 ```
+
+### Clean up Data
 
 ```{r}
 #mean raster from sst raster_stack
@@ -57,7 +61,9 @@ stack_check <- c(depth_new, mean_sst)
 #success
 ```
 
-Part 2: Oysters
+### Part 2: Oysters
+
+### Set Parameters and Reclassifications
 
 ```{r}
 #set oyster paramaters
@@ -84,10 +90,14 @@ x_depth_rcl <- matrix(c(depth_min, depth_max, 1,
 x_depth <- classify(depth_new, x_depth_rcl)
 ```
 
+### Find Suitable Locations
+
 ```{r}
 #use map algebra to find suitable locations
 x_locations <- x_sst * x_depth
 ```
+
+### Calculate Suitable Area for Each EEZ
 
 ```{r}
 #rasterize eez data so we can do zonal analysis
@@ -103,6 +113,8 @@ x_eez_zones <- x_locations * eez_x_raster
 #find total area of suitable space by eez
 suitable_area_by_eez <- zonal(cell_area * (x_eez_zones > 0), eez_x_raster, fun = "sum", na.rm = TRUE)
 ```
+
+### Visualize Findings
 
 ```{r}
 #create dataframe that holds suitable area and geometry of eez
@@ -143,7 +155,9 @@ table_data %>%
    kable_styling(bootstrap_options = c("striped", "hover", "condensed"), full_width = FALSE)
 ```
 
-Part 3: Red Abalone
+### Part 3: Red Abalone
+
+### Set Parameters and Reclassifications
 
 ```{r}
 #set abalone paramaters
@@ -170,10 +184,14 @@ x_depth_rcl <- matrix(c(depth_min, depth_max, 1,
 x_depth <- classify(depth_new, x_depth_rcl)
 ```
 
+### Find Suitable Locations
+
 ```{r}
 #use map algebra to find suitable locations
 x_locations <- x_sst * x_depth
 ```
+
+### Calculate Suitable Area for Each EEZ
 
 ```{r}
 #rasterize eez data so we can do zonal analysis
@@ -189,6 +207,8 @@ x_eez_zones <- x_locations * eez_x_raster
 #find total area of suitable space by eez
 suitable_area_by_eez <- zonal(cell_area * (x_eez_zones > 0), eez_x_raster, fun = "sum", na.rm = TRUE)
 ```
+
+### Visualize Findings
 
 ```{r}
 #create dataframe that holds suitable area and geometry of eez
@@ -228,3 +248,13 @@ table_data %>%
   ) %>%
    kable_styling(bootstrap_options = c("striped", "hover", "condensed"), full_width = FALSE)
 ```
+
+### Data Citations
+
+\| Suitable growing conditions \| SeaLifeBase. 2024. Species Temperature and Depth Requirements for Marine Aquaculture. \| <https://www.sealifebase.ca/search.php> \|
+
+\| Sea surface temperatures \| NOAA Coral Reef Watch. 2008-2012. 5km Daily Global Satellite Sea Surface Temperature Anomaly v3.1. \| <https://coralreefwatch.noaa.gov/product/5km/index_5km_ssta.php> \|
+
+\| Bathymetry \| General Bathymetric Chart of the Oceans (GEBCO). 2024. Gridded Bathymetry Data. \| <https://www.gebco.net/data_and_products/gridded_bathymetry_data/#area> \|
+
+\| Exclusive economic zones \| Marine Regions. 2024. Exclusive Economic Zones (EEZ) Boundaries, West Coast of the United States. \| <https://www.marineregions.org/eez.php> \|
